Bug 345631 - Combo-boxes in tables and forms show all possible columns instead of just one
Summary: Combo-boxes in tables and forms show all possible columns instead of just one
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Forms (other bugs)
Version First Reported In: 2.9.1
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: 2.9.2
Assignee: Jarosław Staniek
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2015-03-28 23:20 UTC by Jarosław Staniek
Modified: 2015-03-29 20:18 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2015-03-28 23:20:26 UTC
Combo-box in tables and forms shows all possible columns instead of just one but Kexi lets the user to define just one visible column. Even bound column (such as id) is presented, what results in an unpleasant look & feel.

Reproducible: Always

Steps to Reproduce:
1. Create combo-box on form or use one in a tabular view
2. Click on combo-box to display table items for selection

Expected Results:  
Just one column should be displayed.
Comment 1 Jarosław Staniek 2015-03-29 11:52:29 UTC
Git commit 55758b4eaa64e1e9fa9321eb87bd6218e8f1596d by Jaroslaw Staniek.
Committed on 28/03/2015 at 23:23.
Pushed by staniek into branch 'calligra/2.9'.

Make combo-boxes in Kexi table and form views show just one column

Without this fix the combo-boxes show all possible columns instead
of just one but Kexi lets the user to define just one visible column.
Even bound column (such as id) is presented, what results in an unpleasant look & feel.

The fix works for both tables and queries used as a combo box row source
REVIEW:123166

M  +42   -9    kexi/widget/tableview/kexicomboboxbase.cpp
M  +7    -1    kexi/widget/tableview/kexicomboboxbase.h
M  +76   -12   kexi/widget/tableview/kexicomboboxpopup.cpp
M  +6    -6    libs/db/lookupfieldschema.cpp
M  +8    -10   libs/db/lookupfieldschema.h

http://commits.kde.org/calligra/55758b4eaa64e1e9fa9321eb87bd6218e8f1596d