Make combo-boxes in Kexi table and form views show just one column

Without this fix the combo-boxes show all possible columns instead
of just one but Kexi lets the user to define just one visible column.
Even bound column (such as id) is presented, what results in an unpleasant look & feel.

The fix works for both tables and queries used as a combo box row source

BUG:345631
REVIEW:123166